--- a/Photo App/Views/MyPhotos/Index.cshtml
+++ b/Photo App/Views/MyPhotos/Index.cshtml
@@ -8,7 +8,9 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-outline-success">Create New</a>
+    <hr />
+    <a href="Home/GenerateAndDownloadZip" target="_blank" class="btn btn-outline-dark">Download </a>
 </p>
 <table class="table">
     <thead>
@@ -28,7 +30,7 @@
     <tbody>
         @foreach (var item in Model)
         {
-            @if (item.Id == @User.Identity.Name)
+            @if (item.Email == @User.Identity.Name)
             {
                 <tr>
                     <td>
@@ -43,7 +45,8 @@
                     <td>
                         <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                         <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
+                        <a asp-controller="Shareds" asp-action="Share" asp-route-sharedName="@item.PhotoName">Share</a>
                     </td>
                 </tr>
             }
