--- a/Photo App/Views/MyPhotos/Details.cshtml
+++ b/Photo App/Views/MyPhotos/Details.cshtml
@@ -14,7 +14,7 @@
             @Html.DisplayNameFor(model => model.PhotoName)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PhotoName)
+            <img src="@("~/Image/"+Model.PhotoName)" asp-append-version="true" width="150px" height="150px" />
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Url)
